--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "tree-chan-frontend",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://trevoraron.github.io/tree-chan-frontend/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
@@ -12,6 +13,7 @@
     "@types/react-dom": "^17.0.0",
     "bootstrap": "^4.6.0",
     "ethers": "^5.1.0",
+    "gh-pages": "^3.1.0",
     "react": "^17.0.2",
     "react-bootstrap": "^1.5.2",
     "react-dom": "^17.0.2",
@@ -20,6 +22,8 @@
     "web-vitals": "^1.0.1"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
